--- a/Store/Areas/Admin/Pages/Localization/Language/Edit.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Edit.cshtml
@@ -13,7 +13,7 @@
     </div>
 
     <h1>@Model.SharedLocalizer["Heading title"]</h1>
-    
+
     <ol class="breadcrumb">
         @foreach (var breadcrumb in Model.Breadcrumbs)
         {
@@ -33,9 +33,11 @@
 
 <div class="card">
     <div class="card-header"><i class="fa-solid fa-pencil"></i> @Model.Localizer["Edit"]</div>
-    
+
     <div class="card-body">
         <form id="language" method="post">
+            <input asp-for="Language.Id" />
+
             <div class="row mb-3">
                 <label asp-for="Language.Name" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
