Changed link to the index language page

--- a/Store/Areas/Admin/Pages/Localization/Language/Edit.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Edit.cshtml
@@ -7,7 +7,7 @@
             <i class="fa-solid fa-floppy-disk"></i>
         </button>
 
-        <a href="@Model.PreviousPage" class="btn btn-light">
+        <a href="@Model.IndexPage" class="btn btn-light">
             <i class="fa-solid fa-reply"></i>
         </a>
     </div>
