--- a/Store/Areas/Admin/Pages/Localization/Language/Edit.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Edit.cshtml
@@ -35,49 +35,6 @@
     <div class="card-header"><i class="fa-solid fa-pencil"></i> @Model.Localizer["Edit"]</div>
 
     <div class="card-body">
-        <form id="language" method="post">
-            <input asp-for="Language.Id" />
-
-            <div class="row mb-3">
-                <label asp-for="Language.Name" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <input asp-for="Language.Name" class="form-control" />
-                    <span asp-validation-for="Language.Name" class="text-danger"></span>
-                </div>
-            </div>
-
-            <div class="row mb-3">
-                <label asp-for="Language.Code" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <input asp-for="Language.Code" class="form-control" />
-                    <span asp-validation-for="Language.Code" class="text-danger"></span>
-                </div>
-            </div>
-
-            <div class="row mb-3">
-                <label asp-for="Language.SortOrder" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <input asp-for="Language.SortOrder" class="form-control" />
-                    <span asp-validation-for="Language.SortOrder" class="text-danger"></span>
-                </div>
-            </div>
-
-            <div class="row mb-3">
-                <label asp-for="Language.Enabled" class="col-sm-2 col-form-label"></label>
-
-                <div class="col-sm-10">
-                    <div class="form-check form-switch">
-                        <input asp-for="Language.Enabled" class="form-check-input" />
-                        <span asp-validation-for="Language.Enabled" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-        </form>
+        @await Html.PartialAsync("_Form", Model.Language)
     </div>
 </div>
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
