Added OnPost handler

--- a/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
@@ -6,6 +6,10 @@
         <a asp-page="Create" class="btn btn-primary">
             <i class="fa-solid fa-plus"></i>
         </a>
+
+        <button class="btn btn-danger" type="submit" form="languages">
+            <i class="fa-solid fa-trash-can"></i>
+        </button>
     </div>
 
     <h1>@Model.SharedLocalizer["Heading title"]</h1>
