--- a/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
@@ -28,10 +28,22 @@
                             <input id="select" class="form-check-input" type="checkbox" />
                         </th>
 
-                        <th scope="col">@Html.DisplayNameForInnerType((LanguageView l) => l.Name)</th>
-                        <th scope="col">@Html.DisplayNameForInnerType((LanguageView l) => l.Code)</th>
-                        <th scope="col">@Html.DisplayNameForInnerType((LanguageView l) => l.SortOrder)</th>
-                        <th scope="col">@Html.DisplayNameForInnerType((LanguageView l) => l.Enabled)</th>
+                        <th scope="col">
+                            <a asp-route-sort="@nameof(LanguageView.Name)">@Html.DisplayNameForInnerType((LanguageView l) => l.Name)</a>
+                        </th>
+
+                        <th scope="col">
+                            <a asp-route-sort="@nameof(LanguageView.Code)">@Html.DisplayNameForInnerType((LanguageView l) => l.Code)</a>
+                        </th>
+
+                        <th scope="col">
+                            <a asp-route-sort="@nameof(LanguageView.SortOrder)">@Html.DisplayNameForInnerType((LanguageView l) => l.SortOrder)</a>
+                        </th>
+
+                        <th scope="col">
+                            <a asp-route-sort="@nameof(LanguageView.Enabled)">@Html.DisplayNameForInnerType((LanguageView l) => l.Enabled)</a>
+                        </th>
+
                         <th scope="col">@Model.SharedLocalizer["Action"]</th>
                     </tr>
                 </thead>
