--- a/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
@@ -91,7 +91,7 @@
                 <h5 class="modal-title" id="createTitle">@Model.Localizer["Add"]</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="@Model.CommonLocalizer["Close"]"></button>
             </div>
-            <div class="modal-body">
+            <div id="modal-content" class="modal-body">
                 <partial name="_Form" for="Language" />
             </div>
             <div class="modal-footer">
@@ -123,13 +123,8 @@
     <script>
         function openModal(id) {
             fetch(location.href + "?handler=GetLanguage&id=" + id)
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById("@($"{nameof(Model.Language)}_{nameof(Model.Language.Name)}")").value = data.@nameof(Model.Language.Name).Camelize();
-                    document.getElementById("@($"{nameof(Model.Language)}_{nameof(Model.Language.Code)}")").value = data.@nameof(Model.Language.Code).Camelize();
-                    document.getElementById("@($"{nameof(Model.Language)}_{nameof(Model.Language.SortOrder)}")").value = data.@nameof(Model.Language.SortOrder).Camelize();
-                    document.getElementById("@($"{nameof(Model.Language)}_{nameof(Model.Language.Enabled)}")").checked = data.@nameof(Model.Language.Enabled).Camelize();
-                });
+                .then(response => response.text())
+                .then(data => document.getElementById("modal-content").innerHTML = data);
         }
     </script>
 }
