--- a/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @using Humanizer
-@using static System.Net.Mime.MediaTypeNames;
+@using System.Net.Mime;
+@using Microsoft.Net.Http.Headers;
 @model IndexModel
 
 <div class="header">
