--- a/Store/Areas/Admin/Pages/Localization/Language/_Form.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/_Form.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LanguageView
 
-<form id="language" asp-page-handler="create" method="post">
+<form id="@IndexModel.FormId" method="post">
     @if (Model.Id > 0)
     {
         <input asp-for="@Model.Id" />
