--- a/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="header">
     <div class="float-end">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#create">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#@IndexModel.ModalId">
             <i class="fa-solid fa-plus"></i>
         </button>
 
