--- a/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
@@ -28,7 +28,7 @@
                 <thead>
                     <tr>
                         <th scope="col">
-                            <input id="select" class="form-check-input" type="checkbox" />
+                            <input id="@IndexModel.MainCheckboxId" class="form-check-input" type="checkbox" />
                         </th>
 
                         <th scope="col">
@@ -58,7 +58,7 @@
                         {
                             <tr>
                                 <th scope="row">
-                                    <input class="form-check-input" type="checkbox" name="selected" value="@language.Id" />
+                                    <input class="form-check-input" type="checkbox" name="@IndexModel.CheckboxName" value="@language.Id" />
                                 </th>
 
                                 <td>@language.Name</td>
@@ -100,7 +100,7 @@
             <div class="modal-footer">
                 <button onclick="update()">Обновить</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@Model.CommonLocalizer["Close"]</button>
-                <button type="submit" form="language" class="btn btn-primary">@Model.CommonLocalizer["Save"]</button>
+                <button type="submit" form="@IndexModel.FormId" class="btn btn-primary">@Model.CommonLocalizer["Save"]</button>
             </div>
         </div>
     </div>
@@ -114,14 +114,12 @@
     }
 
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var mainCheckbox = document.getElementById("select");
-            var subCheckboxes = document.getElementsByName("selected");
+        var mainCheckbox = document.getElementById("@IndexModel.MainCheckboxId");
+        var checkboxes = document.getElementsByName("@IndexModel.CheckboxName");
 
-            mainCheckbox.addEventListener('change', function () {
-                for (var i = 0; i < subCheckboxes.length; i++) {
-                    subCheckboxes[i].checked = mainCheckbox.checked;
-                }
+        mainCheckbox.addEventListener("change", () => {
+            checkboxes.forEach(checkbox => {
+                checkbox.checked = mainCheckbox.checked;
             });
         });
     </script>
