--- a/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
+++ b/Store/Areas/Admin/Pages/Localization/Language/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
-@using Humanizer
-@using System.Net.Mime;
 @using Microsoft.Net.Http.Headers;
+@using System.Net.Mime;
+@using System.Web;
 @model IndexModel
 
 <div class="header">
     <div class="float-end">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#@IndexModel.ModalId">
+        <button id="@IndexModel.AddLanguageButtonId" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#@IndexModel.ModalId">
             <i class="fa-solid fa-plus"></i>
         </button>
 
@@ -67,7 +67,7 @@
                                 <td>@language.Enabled</td>
 
                                 <td>
-                                    <button type="button" class="btn btn-primary" onclick="openModal(@language.Id)">
+                                    <button type="button" class="btn btn-primary" name="@IndexModel.EditLanguageName" data-id="@language.Id">
                                         <i class="fa-solid fa-pencil"></i>
                                     </button>
                                 </td>
@@ -91,14 +91,13 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="createTitle">@Model.Localizer["Add"]</h5>
+                <h5 id="@IndexModel.ModalTitleId" class="modal-title"></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="@Model.CommonLocalizer["Close"]"></button>
             </div>
-            <div id="@IndexModel.ModalContentId" class="modal-body">
-                <partial name="_Form" for="Language" />
+            <div id="@IndexModel.ModalContentId" class="modal-body text-center">
+                <i class="fa-solid fa-spinner fa-spin fa-2xl m-5"></i>
             </div>
             <div class="modal-footer">
-                <button onclick="update()">Обновить</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">@Model.CommonLocalizer["Close"]</button>
                 <button type="submit" form="@IndexModel.FormId" class="btn btn-primary">@Model.CommonLocalizer["Save"]</button>
             </div>
@@ -122,43 +121,128 @@
                 checkbox.checked = mainCheckbox.checked;
             });
         });
+
+        document.getElementById("@IndexModel.AddLanguageButtonId").addEventListener("click", event => {
+            fetch(location.href + "?handler=AddForm")
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById("@IndexModel.ModalTitleId").innerHTML = "@(Model.Localizer["Add"])";
+                    document.getElementById("@IndexModel.ModalContentId").innerHTML = data
+
+                    // настраиваем сабмит событие для создания языка
+                    document.getElementById("@IndexModel.FormId").addEventListener("submit", event => {
+                        event.preventDefault();
+                        add();
+                        alert("add");
+                    })
+                })
+        })
+
+        const editButtons = document.getElementsByName("@IndexModel.EditLanguageName");
+
+        editButtons.forEach(editButton => {
+            const id = editButton.dataset.id;
+
+            editButton.addEventListener("click", event => {
+                fetch(location.href + "?handler=EditForm&id=" + id)
+                    .then(response => response.text())
+                    .then(data => {
+                        document.getElementById("@IndexModel.ModalTitleId").innerHTML = "@(Model.Localizer["Edit"])";
+                        document.getElementById("@IndexModel.ModalContentId").innerHTML = data
+
+                        document.getElementById("@IndexModel.FormId").addEventListener("submit", event => {
+                            event.preventDefault();
+                            edit();
+                            alert("Edit");
+                        });
+
+                        const element = document.getElementById("@IndexModel.ModalId");
+                        new bootstrap.Modal(element).show();
+                    })
+            })
+        })
     </script>
 
     <script>
-        function openModal(id) {
-            fetch(location.href + "?handler=GetLanguage&id=" + id)
-                .then(response => response.text())
-                .then(data => document.getElementById("@IndexModel.ModalContentId").innerHTML = data)
-                .then(() => {
-                    const element = document.getElementById("@IndexModel.ModalId");
-                    new bootstrap.Modal(element).show();
+        function add() {
+            fetch(location.href + "?handler=AddLanguage", {
+                method: "@HttpMethod.Post.Method",
+                headers: {
+                    "@HeaderNames.ContentType": "@MediaTypeNames.Application.Json"
+                },
+                body: createRequestBody()
+            })
+                .then(response => response.json())
+                .then(response => {
+                    if (response.ok) {
+                        alert("Успешно! Обновите список");
+                        return response.text()
+                    } else if (response.status === 400) {
+                        response.json().then(errors => {
+                            alert(errors);
+                        });
+                    } else {
+                        // Form submission encountered other errors
+                        // Handle and display appropriate error message
+                        alert("Третий блок: " + response.status);
+                        response.json().then(errors => {
+                            alert(errors);
+                        });
+                    }
                 })
+                .catch(error => {
+                    // Handle and display any general errors
+                });
         }
 
-        // When we load the modal form dynamically, the prefix is missing
-        function update() {
-            const entity = {
-        @nameof(Model.Language.Id).Camelize(): document.getElementById("@(nameof(Model.Language.Id))").value,
-        @nameof(Model.Language.Name).Camelize(): document.getElementById("@(nameof(Model.Language.Name))").value,
-        @nameof(Model.Language.Code).Camelize(): document.getElementById("@(nameof(Model.Language.Code))").value,
-        @nameof(Model.Language.SortOrder).Camelize(): document.getElementById("@(nameof(Model.Language.SortOrder))").value,
-        @nameof(Model.Language.Enabled).Camelize(): document.getElementById("@(nameof(Model.Language.Enabled))").checked,
-                    };
-
-        fetch(location.href + "?handler=UpdateLanguage", {  // Replace 'Index' with your Razor Page name
-            method: "@HttpMethod.Post.Method",
-            headers: {
-                "@HeaderNames.ContentType": "@MediaTypeNames.Application.Json"
-            },
-            body: JSON.stringify(entity)
-        })
-            .then(response => response.text())
-            .then(data => {
-                alert(data);
+        function edit() {
+            fetch(location.href + "?handler=EditLanguage", {
+                method: "@HttpMethod.Post.Method",
+                headers: {
+                    "@HeaderNames.ContentType": "@MediaTypeNames.Application.Json"
+                },
+                body: createRequestBody()
             })
-            .catch(error => {
-                alert(error);
-            });
-                                                                        }
+                .then(response => response.json())
+                .then(response => {
+                    if (response.ok) {
+                        alert("Успешно! Обновите список");
+                        return response.text()
+                    } else if (response.status === 400) {
+                        response.json().then(errors => {
+                            alert(errors);
+                        });
+                    } else {
+                        // Form submission encountered other errors
+                        // Handle and display appropriate error message
+                        alert("Третий блок: " + response.status);
+                        response.json().then(errors => {
+                            alert(errors);
+                        });
+                    }
+                })
+                .catch(error => {
+                    // Handle and display any general errors
+                });
+        }
+
+        function createRequestBody() {
+            const form = document.getElementById("@IndexModel.FormId");
+            const formData = new FormData(form);
+
+            const entity = {};
+
+            for (const key of formData.keys()) {
+                entity[camelize(key)] = formData.get(key);
+            }
+
+            return JSON.stringify(entity)
+        }
+
+        function camelize(str) {
+            return str.replace(/(?:^\w|[A-Z]|\b\w)/g, function (word, index) {
+                return index === 0 ? word.toLowerCase() : word.toUpperCase();
+            }).replace(/\s+/g, '');
+        }
     </script>
 }
